# ParallelImageEffect

./: .gitignore  CMakeLists.txt  README.md  compile.sh
src/: apply-effect.c  edge-detect.c  info.c  info.h
